# tiktaktoe

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  meson.build  state_generator.py  ttt  ttt.in
resultsOfTImeCheck/: 100_000.in.time  100_000.incaching.time  100_000_000.in.time  100_000_000.incaching.time  10_000_000.in.time  10_000_000.incaching.time  1_000_000.in.time  1_000_000.incaching.time  conclusions.txt
resultsOfTimeCheck/: 100_000_000_cached.time  100_000_000_normal.time  100_000_cached.time  100_000_normal.time  10_000_000_cached.time  10_000_000_normal.time  1_000_000_cached.time  1_000_000_normal.time
src/: IOworker.hpp  State.hpp  localizations.hpp  resolver.hpp  stateHelper.hpp  stateStack.hpp  ttt.cpp
tests/: gtests.cpp
